package triptop.groepB4.domein;

public class IdentityProviderLoginBody {
    public String username;
    public String password;
}
