@startuml Adapter Pattern Class Diagram

skinparam classAttributeIconSize 0

class IdentityProviderLoginController {
    +ResponseEntity<String> login(IdentityProviderLoginBody identityProviderLoginBody)
}

class SmsVerifyLoginController {
    +ResponseEntity<String> login(SmsVerifyLoginBody smsVerifyLoginBody)
}

abstract class LoginService {
    +String login()
    #abstract String getUsername()
}

class IdentityProviderLoginService {
    -String username
    -String password
    +IdentityProviderLoginService(String username, String password)
    +String getUsername()
    +boolean authenticate()
}

class IdentityProviderLoginServiceAdapter {
    -IdentityProviderLoginService identityProviderLoginService
    +IdentityProviderLoginServiceAdapter(IdentityProviderLoginService identityProviderLoginService)
    +String getUsername()
}

class SmsVerifyLoginService {
    -String verificationCode
    +SmsVerifyLoginService(String verificationCode)
    +String getUsername()
    +boolean authenticate()
}

class SmsVerifyLoginServiceAdapter {
    -SmsVerifyLoginService smsVerifyLoginService
    +SmsVerifyLoginServiceAdapter(SmsVerifyLoginService smsVerifyLoginService)
    +String getUsername()
}

class IdentityProviderLoginBody {
    +String username;
    +String password;
}

class SmsVerifyLoginBody {
    +String verificationCode;
}

IdentityProviderLoginController --> IdentityProviderLoginServiceAdapter
IdentityProviderLoginController --> IdentityProviderLoginBody
IdentityProviderLoginServiceAdapter --|> LoginService
IdentityProviderLoginServiceAdapter --> IdentityProviderLoginService

SmsVerifyLoginController --> SmsVerifyLoginServiceAdapter
SmsVerifyLoginController --> SmsVerifyLoginBody
SmsVerifyLoginServiceAdapter --|> LoginService
SmsVerifyLoginServiceAdapter --> SmsVerifyLoginService

@enduml
